# vibe-kanban

./: .gitignore  AGENTS.md  CONFLICT_MODEL_UPDATE.md  Cargo.toml  Dockerfile.dev  IMPLEMENTATION_COMPLETE.md  JJ_DIFF_STATUS_IMPLEMENTATION.md  JJ_INTEROP_SUMMARY.md  JJ_PARALLEL_SESSIONS.md  JJ_VISUAL_COMPARISON.md  README.md  docker-compose.yml  nohup.out  pnpm-lock.yaml  run_preview.sh  test.db
crates/db/.sqlx/: query-0fae02f5082552114df9832e344603bdd7fc9e567c041a28b4b63b4d77659030.json  query-32c2b6ce46f5275ad9f1e09268d9d22a728779bcbe5dcd6d50d36eccd04b8c92.json  query-57483853ae856c3d24a7c21b6de6391e17c986642e04a4d8dbc7ef21b71fd869.json  query-623cf2d2d5f39e7c5cd1ae47f1ce956edd65a743601c4c8f492989b0c365ef6e.json  query-784535dbeb7d5d09d74e273a720ecb0fafa18e289d8d49129ffae554b86076c9.json  query-a1546ff05e300180f347aa9cc6fc66a45a46908b9c642a5638d7f83d7988f1c3.json  query-be5996c939b17e38cce589d9cf6cb130c9a91bf2e92a368b8895c5fd44b5bc27.json
crates/db/migrations/: 20260118000000_add_jj_workspace_support.sql  (+2 more)
crates/remote/: docker-compose.yml
crates/utils/: Cargo.toml
crates/vcs/: Cargo.toml  README.md
crates/vcs/examples/: parallel_agents.rs
crates/vcs/src/: error.rs  factory.rs  lib.rs  traits.rs  types.rs
crates/vcs/src/backend/: git.rs
docs/: docs.json  getting-started.mdx  jj-workflow.md  migration-from-git.md  parallel-agents.md  vcs-abstraction-design.md  vcs-implementation-summary.md
docs/features/: jj-parallel-sessions.md
docs/integrations/: jujutsu-example.rs  jujutsu-git-interop.mdx  jujutsu.mdx
scripts/: setup-jj.js
shared/: types.ts
(+37 files in other folders)
