[package]
name = "vcs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
async-trait = "0.1"

# Git backend (optional)
git2 = { workspace = true, optional = true }

# Jujutsu backend (optional)
# jj-lib = { version = "0.21", optional = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["full"] }

[features]
default = ["git"]
git = ["git2"]
# jj = ["jj-lib"]
